--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 					<div id="mce-responses" class="clear">
 					<div class="response" id="mce-error-response" style="display:none"></div>
 					<div class="response" id="mce-success-response" style="display:none"></div>
-				</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-			    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4c08291e69ba3593f01dc7d2c_5149b238d5" tabindex="-1" value=""></div>
+				</div>    
 			    <div class="clear" ><input class="btn btn-primary btn-xl" type="submit" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 			    </div>
 			</form>
