--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 			</style>
 			<div id="mc_embed_signup">
-			<form action="https://learn.us19.list-manage.com/subscribe/post?u=4c08291e69ba3593f01dc7d2c&amp;id=5149b238d5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+			<form action="https://learn.us19.list-manage.com/subscribe/post?u=4c08291e69ba3593f01dc7d2c&amp;id=5149b238d5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
 			    <div id="mc_embed_signup_scroll">
 				<div class="mc-field-group"></div>
 				<div class="mc-field-group"></div>
