--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
           <div class="col-lg-12 my-auto">
 
           			          <!-- Begin Mailchimp Signup Form -->
-          <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+          
           <style type="text/css">
             #mc_embed_signup{; clear:left; font:14px Helvetica,Arial,sans-serif; }
             /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
           </style>
           <div id="mc_embed_signup">
-          <form action="https://learn.us19.list-manage.com/subscribe/post?u=4c08291e69ba3593f01dc7d2c&amp;id=5149b238d5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+          <form action="https://learn.us19.list-manage.com/subscribe/post?u=4c08291e69ba3593f01dc7d2c&amp;id=5149b238d5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" >
               <div id="mc_embed_signup_scroll">
               <div class="mc-field-group"> </div>   
               <div class="mc-field-group"> </div>
